This code is busting me

--- a/classifier/feature_eng.ipynb
+++ b/classifier/feature_eng.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -311,14 +311,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created dataset with 1800 seconds interval time.\n"
+      "Created dataset with 21600 seconds interval time.\n"
      ]
     }
    ],
@@ -328,7 +328,8 @@
     "# ID, time (probe_delta steps), mood (value if new, else the previous, else the next), arousal (same as mood), valence (same as mood), actvity (same as mood), \n",
     "# screen (time in that range 1 if 30 minutes, 0.5 if 15 mins...), call (1/0), sms (1/0), appCat.x (same as screen), last day avg mood, 2 days ago avg mood\n",
     "\n",
-    "\n",
+    "# Delete all data before 2014-03-13 since tehre's too little data\n",
+    "df = df[df[\"time\"].dt.date > pd.to_datetime(\"2014-03-13\").date()]\n",
     "\n",
     "def overlap_seconds(start1, end1, start2, end2):\n",
     "    # Determine the maximum of the start times and the minimum of the end times\n",
@@ -343,7 +344,7 @@
     "\n",
     "# Only use deltas that fit into a day with an int multiplier\n",
     "# Intervals in seconds:\n",
-    "for probe_delta in [1800]:\n",
+    "for probe_delta in [21600]:\n",
     "\n",
     "    feature_engineered = pd.DataFrame()\n",
     "\n",
@@ -430,6 +431,13 @@
     "\n",
     "    feature_engineered.to_csv(\"feat_eng_\"+str(probe_delta)+\".csv\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -437,6 +445,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
