--- a/classifier/regression_model_aggr.ipynb
+++ b/classifier/regression_model_aggr.ipynb
@@ -19,7 +19,7 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
     "\n",
     "import pandas as pd"
    ]
@@ -739,22 +739,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "b825d579-ea45-49e2-990b-b3c231642b08",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-21T13:52:27.001333Z",
+     "start_time": "2024-04-21T13:52:26.972518Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.46\n"
+      "Mean Squared Error: 0.45\n",
+      "Mean Absolute Error: 0.51\n"
      ]
     }
    ],
    "source": [
     "y_pred = pipeline.predict(X_test)\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
-    "print(f\"Mean Squared Error: {mse:.2f}\")"
+    "print(f\"Mean Squared Error: {mse:.2f}\")\n",
+    "\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "print(f\"Mean Absolute Error: {mae:.2f}\")\n"
    ]
   },
   {
